--- a/package.json
+++ b/package.json
@@ -3,10 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/styled-engine-sc": "^6.3.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.14",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
